--- a/traffic-lights/traffic-lights/ClientApp/src/components/TrafficLight.css
+++ b/traffic-lights/traffic-lights/ClientApp/src/components/TrafficLight.css
@@ -9,7 +9,7 @@
   
   .flex-container > div {
       margin: 4px 0px;
-      border-radius: 50px;
+      border-radius: 50%;
       width :80px;
       height: 80px;
   }
